User registration implemented.